<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.wolf</groupId>
    <artifactId>bookshelf</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>
	<properties>
        <node.executionRootDirectory>C:\Program Files\</node.executionRootDirectory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.14.1</version>
<!--            <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>2.5</version>
<!--            <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.14.1</version>
<!--            <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4.1212</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>7.0</version>
<!--            <scope>provided</scope>-->
        </dependency>
       <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.2.10.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>5.2.10.Final</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>5.3.2.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-envers</artifactId>
            <version>5.2.4.Final</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
<!--            <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testSourceDirectory>src/test</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Allow JUnit to access the test classes -->
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <ChangeSet>${changeSet}</ChangeSet>
                            <ChangeSetDate>${changeSetDate}</ChangeSetDate>
                            <ChangeSetNumber>${changeSetNumber}</ChangeSetNumber>
                            <Version>${project.version}</Version>
                        </manifestEntries>
                    </archive>
                    <webResources>
                        <resource>
                            <directory>target/generated-resources/frontend</directory>
                            <excludes>
                                <exclude>**/rev-manifest*.json</exclude>
                            </excludes>
                        </resource>
                        <resource>
                            <directory>target/generated-resources/frontend</directory>
                        </resource>
                    </webResources>
                    <!-- <webXml>web.xml</webXml> -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>2.0.1.Final</version>
            </plugin>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <!-- <version>1.12.1</version> -->
                <version>1.6</version>
                <configuration>
                    <nodeVersion>v10.15.2</nodeVersion>
                    <npmVersion>6.4.1</npmVersion>
                    <installDirectory>${node.executionRootDirectory}</installDirectory>
					<testFailureIgnore>true</testFailureIgnore>
                </configuration>
                <executions>
                    <execution>
                        <id>webpack build</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <!-- <goal>npm</goal> -->
                            <goal>webpack</goal>
                        </goals>
                        <configuration>
                            <!-- optional: if not specified, it will run webpack's default
                            build (and you can remove this whole <configuration> section.) -->
                            <!-- <arguments>-p</arguments> -->
                            <!-- <arguments>build -Dskip.webpack</arguments> -->
                            <!-- <arguments>run build</arguments> -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <finalName>bookshelf</finalName>

    </build>

</project>